<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="390dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <!-- 目录列表 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                >
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@mipmap/ic_launcher"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/raceation_life"
                    android:textSize="15sp"
                    android:layout_marginLeft="10dp"
                    />
            </LinearLayout>
            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#F5F5F5"
                />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                >
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@mipmap/ic_launcher"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/raceation_repit"
                    android:textSize="15sp"
                    android:layout_marginLeft="10dp"
                    />
            </LinearLayout>
            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#F5F5F5"
                />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                >
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@mipmap/ic_launcher"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/raceation_annimal"
                    android:textSize="15sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="30dp"
                    />
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#F5F5F5"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                >
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@mipmap/ic_launcher"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/raceation_food"
                    android:textSize="15sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="30dp"
                    />
            </LinearLayout>
            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#F5F5F5"
                />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                >
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@mipmap/ic_launcher"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/raceation_all"
                    android:textSize="15sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="30dp"
                    />
            </LinearLayout>
            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#F5F5F5"
                />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                >
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:layout_marginLeft="10dp"
                    />
            </LinearLayout>

        </LinearLayout>
        <TextView
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="#e8e8e8"
        />
</LinearLayout>
